--- a/index.css
+++ b/index.css
@@ -3,7 +3,6 @@ body{
     width: 100%;
     max-width: 600px;
     font-family: 'Smythe', cursive;
-
 }
 
 button{
@@ -37,7 +36,7 @@ header {
     font-weight: normal;
 }
 
-.retaurant-motto{
+.restaurant-motto{
     position: absolute;
     right: 0px;
     left: 10%;
@@ -193,12 +192,39 @@ main{
 
 
 .card-details-form{
-    box-shadow: 0 5px 40px black;
+    box-shadow: 10px 5px 40px rgba(0, 0, 0, 0.5);
     background-color: white;
-    width: 100%;
+    width: 80%;
     max-width: 500px;
     display: flex;
     flex-direction: column;
+    padding: 25px;
+    font-family: Verdana, sans-serif;
+    flex-wrap: wrap;
+    gap: 25px;
+    margin: 0 auto;
+    z-index: 1000;
+    /* border: 1px solid red; */
+}
+
+.card-details-title{
+    font-weight: bold;
+    margin: auto;
+    padding: 20px;
+}
+
+.card-details-form input{
+    padding: 25px;
+    font-size: 20px;
+    border-radius: 4px;
+    border: 1px solid #757575;
+}
+
+modal button{
+    background-color: #16DB99;
+    padding: 25px 30px;
+    border: none;
+    border-radius: 4px;
 }
 
 .hidden{
