--- a/index.css
+++ b/index.css
@@ -190,7 +190,6 @@ main{
     font-size: 14px;
 }
 
-
 .card-details-form{
     box-shadow: 10px 5px 40px rgba(0, 0, 0, 0.5);
     background-color: white;
@@ -200,11 +199,16 @@ main{
     flex-direction: column;
     padding: 25px;
     font-family: Verdana, sans-serif;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     gap: 25px;
     margin: 0 auto;
-    z-index: 1000;
+    /* z-index: 1000; */
     /* border: 1px solid red; */
+    /* left: 0;
+    right: 0;
+    align-items: center;
+    justify-content: center; */
+    /* position: fixed; */
 }
 
 .card-details-title{
@@ -220,11 +224,23 @@ main{
     border: 1px solid #757575;
 }
 
+.card-details-modal{
+    /* position: fixed; */
+    /* margin: auto;
+    top: 80px; */
+    /* left: 0;
+    right: 0; */
+    /* align-items: center;
+    justify-content: center; */
+    display: block;
+}
+
 modal button{
     background-color: #16DB99;
     padding: 25px 30px;
     border: none;
     border-radius: 4px;
+    margin-top: 30px;
 }
 
 .hidden{
