--- a/index.css
+++ b/index.css
@@ -24,9 +24,7 @@ header {
     /* min-width: 80px; */
     max-width: 600px;
     position: relative;
-    overflow: hidden
 }
-
 
 .restaurant-name{
     position: absolute;
@@ -78,6 +76,7 @@ main{
     max-width: 500px;
     margin: auto;
     padding: 30px 0 40px 0;
+    opacity: 1;
 }
 
 .item-icon{
@@ -126,12 +125,21 @@ main{
     height: 50px;
     width: 50px;
     position: absolute;
+    transition: 0.3s;
 }
 
 .add-item-btn:hover{
-    height: 55px;
-    width: 55px;
+    height: 65px;
+    width: 65px;
     background-color: #DEDEDE;
+    color: white;
+}
+
+.add-item-btn:active{
+    border: 1px solid #DEDEDE;
+    background-color: white;
+    height: 50px;
+    width: 50px;
 }
 
 .order-header{
@@ -205,13 +213,16 @@ main{
 
 .complete-order-btn:hover{
     background-color: #15b580;
-    font-size: 14px;
+}
+
+.complete-order-btn:active{
+    background-color: #16DB99;
 }
 
 .card-details-form{
     box-shadow: 10px 5px 40px rgba(0, 0, 0, 0.5);
     background-color: white;
-    width: 80%;
+    width: 100%;
     max-width: 500px;
     display: flex;
     flex-direction: column;
@@ -236,13 +247,15 @@ main{
 
 #card-details-modal{
     position: fixed;
-    /* margin: auto; */
-    top: 80px;
+    margin: auto;
+    /* top: 80px; */
+    top: 330px;
     left: 0;
     right: 0;
-    /* align-items: center;
-    justify-content: center; */
+    width: 80%;
+    max-width: 500px;
     display: none;
+    /* opacity: 1; */
 }
 
 #pay-btn{
@@ -251,8 +264,17 @@ main{
     border: none;
     border-radius: 4px;
     margin-top: 30px;
+    color: white;
+    font-weight: bold;
 }
 
+#pay-btn:hover{
+    background-color: #15b580;
+}
+
+#pay-btn:active{
+    background-color: #16DB99;
+}
 .success-modal{
     box-shadow: 10px 5px 40px rgba(0, 0, 0, 0.5);
     background-color: white;
@@ -273,8 +295,8 @@ main{
 .close-btn{
     /* padding: 25px 30px; */
     position: absolute;
-    top: 8%;
-    right: 3%;
+    top: 18px;
+    right: 18px;
     width: 30px;
     height: 30px;
     /* border: none; */
@@ -291,12 +313,6 @@ main{
 
 .hidden{
     display: none;
-}
+};
 
-.circle{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    background-color: red;
-    margin: 5px;
-}
+
